# mruby-k2hash

./: .gitignore  .travis.yml  Dockerfile  Makefile.am  README.md  build_config_example.rb  configure.ac  mrbgem.rake  travis_config.rb
mrblib/: k2hash.rb
src/: .gitmodules  mruby_k2hash.c
test/: mruby-k2hash_test.rb
